manca un 1/3 del progetto

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h2>Trova il piano Business che fa per te</h2>
                 <input type="radio" name="" id="">Fatturazione mensile <input type="radio" name="" id="">Fatturazione annuale
                     <div class="flex-container">
-                        <div class="col-container ">
+                        <div class="col-container">
                             <div class="head-pacchetto">
                                 <span><i class="fa-solid fa-user"></i>Singolo</span>
                             </div>
@@ -150,7 +150,174 @@
                     </div>
                 </div>
             </div>
-        </div>         
+            <div class="container-young" style="display: flex;">
+                <div>
+                    <img style="max-width: 450px;" src="img/partner.png" alt="">
+                </div>
+                <div  class="col-lateral-text">
+                    <div style=" font-size: 24px; padding-bottom: 20px">
+                        <span><strong>Entra in contatto con un partner Dropbox</strong></span>
+                    </div>
+                    <div style="padding-bottom: 20px ;">
+                        <span>Trova un partner Dropboxe HelloSign
+                            di fiducia. Ottieni le soluzioni e i servizi
+                            necessari per raggiungere i tuai obiettivi
+                            aziendali, tra cui implementazione,
+                            integrazione, gestione e supporto
+                            Continui.</span>
+                    </div>
+                    <div>
+                        <a class="small-botton" href="">Trova un partner</a>
+                    </div>
+                </div>
+            </div>
+            <div class="container-young">
+                <h2 style="padding-top: 100px;">Esegui più operazioni con Dropbox Business</h2>
+                <div style="display: flex;">
+                <div class="flex-container">
+                    <div class="col-container-img">
+                        <div  class="col-text-img">
+                            <img style="max-width: 190px;" src="img/business-feature-switching-tools.png" alt="">
+                            <span style="display: block; padding-bottom: 10px;"><strong>Passa di meno da uno strumento all'altro</strong></span>
+                            <span style="color: gray;"><small>Porta a termine le attività quotidiane
+                                Lom un solo strumento. Crea, mudilica e
+                                condividi contenuti cloud da
+                                Docurmenti, Fogli e Presentazioni di
+                                Google, file Microsoft office e Dropbox
+                                Paper direttamente da Dropbox.</small></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-container">
+                    <div class="col-container-img">
+                        <div  class="col-text-img">
+                            <img style="max-width: 190px;" src="img/business-feature-send-files-it.png" alt="">
+                            <span style="display: block; padding-bottom: 10px;"><strong>Passa di meno da uno strumento all'altro</strong></span>
+                            <span style="color: gray;"><small>Porta a termine le attività quotidiane
+                                Lom un solo strumento. Crea, mudilica e
+                                condividi contenuti cloud da
+                                Docurmenti, Fogli e Presentazioni di
+                                Google, file Microsoft office e Dropbox
+                                Paper direttamente da Dropbox.</small></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-container">
+                    <div class="col-container-img">
+                        <div  class="col-text-img">
+                            <img style="max-width: 190px;" src="img/business-feature-coordinate-it.png" alt="">
+                            <span style="display: block; padding-bottom: 10px;"><strong>Passa di meno da uno strumento all'altro</strong></span>
+                            <span style="color: gray;"><small>Porta a termine le attività quotidiane
+                                Lom un solo strumento. Crea, mudilica e
+                                condividi contenuti cloud da
+                                Docurmenti, Fogli e Presentazioni di
+                                Google, file Microsoft office e Dropbox
+                                Paper direttamente da Dropbox.</small></span>
+                        </div>
+                    </div>
+                </div>
+                </div>
+
+            </div>
+            <div class="container-young">
+                <div style="display: flex;">
+                <div class="flex-container">
+                    <div class="col-container-img">
+                        <div  class="col-text-img">
+                            <img style="max-width: 190px;" src="img/business-feature-integrations-it.png" alt="">
+                            <span style="display: block; padding-bottom: 10px;"><strong>Passa di meno da uno strumento all'altro</strong></span>
+                            <span style="color: gray;"><small>Porta a termine le attività quotidiane
+                                Lom un solo strumento. Crea, mudilica e
+                                condividi contenuti cloud da
+                                Docurmenti, Fogli e Presentazioni di
+                                Google, file Microsoft office e Dropbox
+                                Paper direttamente da Dropbox.</small></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-container">
+                    <div class="col-container-img">
+                        <div  class="col-text-img">
+                            <img style="max-width: 190px;" src="img/business-feature-multi-device.png" alt="">
+                            <span style="display: block; padding-bottom: 10px;"><strong>Passa di meno da uno strumento all'altro</strong></span>
+                            <span style="color: gray;"><small>Porta a termine le attività quotidiane
+                                Lom un solo strumento. Crea, mudilica e
+                                condividi contenuti cloud da
+                                Docurmenti, Fogli e Presentazioni di
+                                Google, file Microsoft office e Dropbox
+                                Paper direttamente da Dropbox.</small></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-container">
+                    <div class="col-container-img">
+                        <div  class="col-text-img">
+                            <img style="max-width: 190px;" src="img/business-feature-security.png" alt="">
+                            <span style="display: block; padding-bottom: 10px;"><strong>Passa di meno da uno strumento all'altro</strong></span>
+                            <span style="color: gray;"><small>Porta a termine le attività quotidiane
+                                Lom un solo strumento. Crea, mudilica e
+                                condividi contenuti cloud da
+                                Docurmenti, Fogli e Presentazioni di
+                                Google, file Microsoft office e Dropbox
+                                Paper direttamente da Dropbox.</small></span>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div style="display: flex; padding-top: 80px;" class="container-young">
+                <div>
+                    <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                    <a style="text-decoration: underline; color: #9d26bc;" href="https://">Scopri di più sui nostri clienti</a>
+                </div>
+                <div class="vacat-square">
+
+                </div>
+            </div>
+        </div>
+        <div class="section3">
+            <div class="giant-square">
+                <div class="giant-square-inside">
+                    <div style="background-color: #bfffbf">
+                        <img class="small-img-square" src="img/designit.svg" alt="">
+                    </div>
+                    <div style="background-color: #4b2727">
+                        <img class="small-img-square" src="img/arizona_state_university.svg" alt="">
+                    </div>
+                    <div style="background-color: #51e9f1">
+                        <img class="small-img-square" src="img/university_of_florida.svg" alt="">
+                    </div>
+                    <div style="background-color: #f44c10">
+                        <img class="small-img-square" src="img/topps.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="giant-square">
+                <div style="padding: 50px">
+                    <img style="width: 200px;" src="img/designit.svg" alt="">
+                    <hr>
+                    <p>I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono comptaibili con queste esigenze, ma nessuna è facile come Dropbox e Dropbox Paper. Ora molte soluzioni sono comptaibili con queste esigenze, ma nessuna è facile come Dropbox Paper.</p>
+                    <span> Mortem Thomsen, Global IT Led</span>
+                </div>
+
+            </div>
+            <div class="giant-square">
+                <div class="giant-square-inside">
+                    <div style="background-color: red">
+                        <img class="small-img-square" src="img/world_bicycle_relief.svg" alt="">
+                    </div>
+                    <div style="background-color: #95ffe0">
+                        <img class="small-img-square" src="img/hearst_corp.svg" alt="">
+                    </div>
+                    <div style="background-color: #16256b">
+                        <img class="small-img-square" src="img/lonely_planet.svg" alt="">
+                    </div>
+                    <div style="background-color: #fff600">
+                        <img class="small-img-square" src="img/clear_channel.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>        
     </main>
     
 </body>
