aggiustate le icone "i"

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <div class="head-pacchetto">
                                 <span><i class="fa-solid fa-user"></i>Singolo</span>
                             </div>
-                            <div style="padding-bottom: 190px;"  class="col-text">
+                            <div class="col-text space-button">
                                 <h3>Professional</h3>
                                 <span style="display: block; padding-bottom: 10px;"><strong>$12.00</strong></span>
                                 <span style="color: gray;"><small>/mese</small></span>
