Finished Full Leyout tomorrow I'll fix all the code

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="head-pacchetto">
                         <span><i class="fa-solid fa-building"></i>Team</span>
                     </div>
-                    <div style="padding-bottom: 10px; display: flex; " class="col-text">
+                    <div class="col-text large-col">
                         <div>
                             <h3>Enterprise</h3>
                             <span style="display: block; padding-bottom: 60px;"><strong>Contatta l'ufficio vendite per i prezzi</strong></span>
@@ -317,8 +317,110 @@
                     </div>
                 </div>
             </div>
-        </div>        
-    </main>
-    
+        </div> 
+        <div class="section4">
+            <div class="container-young ">
+                <div class="col-container col-large">
+                    <div class="col-text under-square">
+                        <div>
+                            <h2 class="bordeaux">Porta Dropbox Business nella tua azienda</h2>
+                        </div>
+                        <div class="col-contattaci noborder">
+                            <a class="small-botton-blue botton-white" href="">Inizia la tua prova gratuita</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+        <div class="section5">
+            <div class="container-young ">
+                <div class="col-container col-large">
+                    <div class="col-text under-square answer">
+                        <div>
+                            <h2>Domande frequenti</h2>
+                        </div>
+                        <div>
+                            <hr class="answer-lines">
+                            <span> Qual è la differenze tra Dropbox Business Standard e Dropbox Business Advanced <i class="fa-solid fa-angle-down fa-float"></i></span>
+                            <hr class="answer-lines">
+                            <span> E' possibile annulare l'abbonamento ? <i class="fa-solid fa-angle-down fa-float"></i></span>
+                            <hr class="answer-lines">
+                            <span> Percè voi meglio di altri? <i class="fa-solid fa-angle-down fa-float"></i></span>
+                            <hr class="answer-lines"> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+    </main>    
+    <footer>
+        <div class="section6">
+            <div class="container-young container-footer">
+                    <div class="flex-container">
+                        <div class="col-container ">
+                            <div class="col-text col-text-footer">
+                                <h3>Dropbox</h3>
+                                <a href="">Applicazione desktop</a>
+                                <a href="">Perché Dropbox</a>
+                                <a href="">Piani</a>
+                                <a href="">Sicurezza</a>
+                                <a href="">Funzioni</a>
+                            </div>
+                        </div>
+                        <div class="col-container ">
+                            <div class="col-text col-text-footer">
+                                <h3>Prodotti</h3>
+                                <a href="">Applicazione desktop</a>
+                                <a href="">Perché Dropbox</a>
+                                <a href="">Piani</a>
+                                <a href="">Sicurezza</a>
+                                <a href="">Funzioni</a>
+                            </div>
+                        </div>
+                        <div class="col-container ">
+                            <div class="col-text col-text-footer">
+                                <h3>Azienda</h3>
+                                <a href="">Applicazione desktop</a>
+                                <a href="">Perché Dropbox</a>
+                                <a href="">Piani</a>
+                                <a href="">Sicurezza</a>
+                                <a href="">Funzioni</a>
+                            </div>
+                        </div>
+                        <div class="col-container ">
+                            <div class="col-text col-text-footer">
+                                <h3>Supporto</h3>
+                                <a href="">Applicazione desktop</a>
+                                <a href="">Perché Dropbox</a>
+                                <a href="">Piani</a>
+                                <a href="">Sicurezza</a>
+                                <a href="">Funzioni</a>
+                            </div>
+                        </div>
+                        <div class="col-container ">
+                            <div class="col-text col-text-footer">
+                                <h3>Community</h3>
+                                <a href="">Applicazione desktop</a>
+                                <a href="">Perché Dropbox</a>
+                                <a href="">Piani</a>
+                                <a href="">Sicurezza</a>
+                                <a href="">Funzioni</a>
+                            </div>
+                        </div>
+                    </div>
+            </div>       
+        </div>
+        <div class="section6">
+            <div class="lenguages">
+                <label for="lenguages"><i class="fa-solid fa-earth-americas"></i></label>
+                <select class="convert-lenguages" id="lenguages">
+                    <option value="Italiano">Italiano</option>
+                    <option value="Inglese">Inglese</option>
+                    <option value="Spagnolo">Spagnolo</option>
+                    <option value="Tedesco">Tedesco</option>
+                </select>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
