--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
@@ -47,7 +51,7 @@
                     <span class="arrow"><i class="fa-solid fa-arrow-down"></i></span>
                 </div>
                 <div class="col2">
-                    <img style="max-width: 600px;" src="img/jumbo.png" alt="">
+                    <img class="img-jumbo" src="img/jumbo.png" alt="">
                 </div>
             </div>
         </div>
@@ -67,7 +71,7 @@
                                 <ul>
                                     <li> <i class="fa-solid fa-user"></i>1 Utente</li>
                                     <li> <i class="fa-solid fa-folder"></i>5TB di spazio di archiviazione sicuro</li>
-                                    <li> <i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                    <li class="lines-space-botton"> <i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                                 </ul>
                                 <a style="display: block;" class="small-botton-blue" href="">Prova gratis per 30 giorni</a>
                                 <span>oppure <a style="text-decoration: underline; color: #9d26bc;" href="https://">acquista ora</a> </span>
@@ -110,7 +114,7 @@
                             <div class="head-pacchetto">
                                 <span><i class="fa-solid fa-building"></i>Azienda</span>
                             </div>
-                            <div style="padding-bottom: 142px;" class="col-text">
+                            <div class="col-text space-botton2">
                                 <h3>Enterprise</h3>
                                 <span style="display: block; padding-bottom: 10px;"><strong>Contattaci</strong></span>
                                 <span><small>-</small></span>
@@ -145,7 +149,7 @@
                             <span>Soluzioni personalizzate e supporto e support su misura per aiutare i professionisti nella gestione su qualsiasi scala</span>
                         </div>
                         <div class="col-contattaci">
-                            <a style="display: inline-block; width: 175px;" class="small-botton-blue" href="">Contatta l'ufficio vendite</a>
+                            <a class="small-botton-blue botton-large-col" href="">Contatta l'ufficio vendite</a>
                         </div>
                     </div>
                 </div>
@@ -360,51 +364,51 @@
                         <div class="col-container ">
                             <div class="col-text col-text-footer">
                                 <h3>Dropbox</h3>
-                                <a href="">Applicazione desktop</a>
-                                <a href="">Perché Dropbox</a>
-                                <a href="">Piani</a>
-                                <a href="">Sicurezza</a>
-                                <a href="">Funzioni</a>
+                                <a href=""><small>Applicazione desktop</small> </a>
+                                <a href=""><small>Perché Dropbox</small> </a>
+                                <a href=""><small>Piani</small></a>
+                                <a href=""><small>Sicurezza</small> </a>
+                                <a href=""><small>Funzioni</small></a>>
                             </div>
                         </div>
                         <div class="col-container ">
                             <div class="col-text col-text-footer">
                                 <h3>Prodotti</h3>
-                                <a href="">Applicazione desktop</a>
-                                <a href="">Perché Dropbox</a>
-                                <a href="">Piani</a>
-                                <a href="">Sicurezza</a>
-                                <a href="">Funzioni</a>
+                                <a href=""><small>Applicazione desktop</small> </a>
+                                <a href=""><small>Perché Dropbox</small> </a>
+                                <a href=""><small>Piani</small></a>
+                                <a href=""><small>Sicurezza</small> </a>
+                                <a href=""><small>Funzioni</small></a>
                             </div>
                         </div>
                         <div class="col-container ">
                             <div class="col-text col-text-footer">
                                 <h3>Azienda</h3>
-                                <a href="">Applicazione desktop</a>
-                                <a href="">Perché Dropbox</a>
-                                <a href="">Piani</a>
-                                <a href="">Sicurezza</a>
-                                <a href="">Funzioni</a>
+                                <a href=""><small>Applicazione desktop</small> </a>
+                                <a href=""><small>Perché Dropbox</small> </a>
+                                <a href=""><small>Piani</small></a>
+                                <a href=""><small>Sicurezza</small> </a>
+                                <a href=""><small>Funzioni</small></a>
                             </div>
                         </div>
                         <div class="col-container ">
                             <div class="col-text col-text-footer">
                                 <h3>Supporto</h3>
-                                <a href="">Applicazione desktop</a>
-                                <a href="">Perché Dropbox</a>
-                                <a href="">Piani</a>
-                                <a href="">Sicurezza</a>
-                                <a href="">Funzioni</a>
+                                <a href=""><small>Applicazione desktop</small> </a>
+                                <a href=""><small>Perché Dropbox</small> </a>
+                                <a href=""><small>Piani</small></a>
+                                <a href=""><small>Sicurezza</small> </a>
+                                <a href=""><small>Funzioni</small></a>
                             </div>
                         </div>
                         <div class="col-container ">
                             <div class="col-text col-text-footer">
                                 <h3>Community</h3>
-                                <a href="">Applicazione desktop</a>
-                                <a href="">Perché Dropbox</a>
-                                <a href="">Piani</a>
-                                <a href="">Sicurezza</a>
-                                <a href="">Funzioni</a>
+                                <a href=""><small>Applicazione desktop</small> </a>
+                                <a href=""><small>Perché Dropbox</small> </a>
+                                <a href=""><small>Piani</small></a>
+                                <a href=""><small>Sicurezza</small> </a>
+                                <a href=""><small>Funzioni</small></a>
                             </div>
                         </div>
                     </div>
