correzione di un piccolo testo erroneamente digitato

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                                 <a href=""><small>Perché Dropbox</small> </a>
                                 <a href=""><small>Piani</small></a>
                                 <a href=""><small>Sicurezza</small> </a>
-                                <a href=""><small>Funzioni</small></a>>
+                                <a href=""><small>Funzioni</small></a>
                             </div>
                         </div>
                         <div class="col-container ">
