--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="">Supporto</a>
                     <a href="">Contatta l'ufficio vendite</a>
                     <a href="">Accedi</a>
-                    <a class="small-botton-blue" href="">Inizia</a>
+                    <a class="head-small-botton-blue" href="">Inizia</a>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
                                     <li class="lines-space-botton"> <i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                                 </ul>
                                 <a style="display: block;" class="small-botton-blue" href="">Prova gratis per 30 giorni</a>
-                                <span>oppure <a style="text-decoration: underline; color: #9d26bc;" href="https://">acquista ora</a> </span>
+                                <span>oppure <a class="link-buy" href="https://">acquista ora</a> </span>
                                 <hr>
                                 <span><strong>Punti salienti del piano</strong></span>
                                 <ul>
@@ -97,7 +97,7 @@
                                     <li> <i class="fa-solid fa-share-nodes"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</li>
                                 </ul>
                                 <a style="display: block;" class="small-botton-blue" href="">Prova gratis per 30 giorni</a>
-                                <span>oppure <a style="text-decoration: underline; color: #9d26bc;" href="https://">acquista ora</a> </span>
+                                <span>oppure <a class="link-buy" href="https://">acquista ora</a> </span>
                                 <hr>
                                 <span><strong>Punti salienti del piano</strong></span>
                                 <ul>
@@ -124,7 +124,7 @@
                                     <li> <i class="fa-solid fa-share-nodes"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
                                 </ul>
                                 <a style="display: block;" class="small-botton-blue" href="">Prova gratis per 30 giorni</a>
-                                <span>oppure <a style="text-decoration: underline; color: #9d26bc;" href="https://">acquista ora</a> </span>
+                                <span>oppure <a class="link-buy" href="https://">acquista ora</a> </span>
                                 <hr>
                                 <span><strong>Punti salienti del piano</strong></span>
                                 <ul>
