corretto alcuni effetti hover, e reso interattiva la section delle answer

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div style="display: flex; padding-top: 80px;" class="container-young">
                 <div>
                     <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
-                    <a style="text-decoration: underline; color: #9d26bc;" href="https://">Scopri di più sui nostri clienti</a>
+                    <a class="link-buy" href="https://">Scopri di più sui nostri clienti</a>
                 </div>
                 <div class="vacat-square">
 
@@ -344,12 +344,24 @@
                             <h2>Domande frequenti</h2>
                         </div>
                         <div>
+                            <div class="transition-answer">
+                                <hr class="answer-lines">
+                                <span> Qual è la differenze tra Dropbox Business Standard e Dropbox Business Advanced <i class="fa-solid fa-angle-down fa-float transition"></i></span>
+                                <br>
+                                <span class="answer-resp"> Uno è meglio dell'altro!</span>
+                            </div>
+                            <div class="transition-answer">
                             <hr class="answer-lines">
-                            <span> Qual è la differenze tra Dropbox Business Standard e Dropbox Business Advanced <i class="fa-solid fa-angle-down fa-float"></i></span>
+                            <span> E' possibile annulare l'abbonamento ? <i class="fa-solid fa-angle-down fa-float transition"></i></span>
+                            <br>
+                            <span class="answer-resp"> Certo basta cliccare annulla!</span>
+                            </div>
+                            <div class="transition-answer">
                             <hr class="answer-lines">
-                            <span> E' possibile annulare l'abbonamento ? <i class="fa-solid fa-angle-down fa-float"></i></span>
-                            <hr class="answer-lines">
-                            <span> Percè voi meglio di altri? <i class="fa-solid fa-angle-down fa-float"></i></span>
+                            <span> Percè voi meglio di altri? <i class="fa-solid fa-angle-down fa-float transition"></i></span>
+                            <br>
+                            <span class="answer-resp"> Perchè noi siamo noi!</span>
+                            </div>
                             <hr class="answer-lines"> 
                         </div>
                     </div>
